--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
       @font-face {
         font-family: 'Inter';
         font-style: normal;
-        font-weight: 300 900;
+        font-weight: 350 750;
         font-display: swap;
-        src: url(/fonts/Inter-variable.woff2) format('woff2');
+        src: url(/fonts/Inter-variable-optimised.woff2) format('woff2');
       }
     </style>
   </head>
